# esv-cli

./: Cargo.toml  README.md
src/: main.rs  tui.rs
