[package]
name = "daily-reading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.7"
toml = "0.8.19"
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12.4" }